examples/misc/error/compilation/eval_unexpected-non-index.bfr
codegen [
  $build {
    a: array(3) { x: cell }
  }
  > a@x
]